# rust_net

./: .gitignore  .metadata  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  docker-compose.yml  melos.yaml  pubspec.yaml
.github/workflows/: tag-release.yml
Fixture server/nginx/: README.md  default.conf
android/: build.gradle  settings.gradle
example/lib/: main.dart
example/macos/Runner/Configs/: AppInfo.xcconfig
examples/rust_net_dio_consumer/: README.md
examples/rust_net_dio_consumer/lib/: main.dart
fixture_server/nginx/: README.md
ios/: rust_net.podspec
lib/: rust_net.dart  rust_net_bindings_generated.dart
lib/src/: rust_net_client.dart
lib/src/data/dto/: native_http_client_config_dto.dart  native_http_client_config_dto.freezed.dart  native_http_error_dto.g.dart  native_http_request_dto.dart  native_http_request_dto.freezed.dart  native_http_response_dto.dart  native_http_response_dto.freezed.dart  native_http_response_dto.g.dart  native_http_result_dto.dart  native_http_result_dto.freezed.dart
lib/src/ffi/: rust_net_native_library_resolver.dart
macos/: rust_net.podspec
native/rust_net_native/: Cargo.toml
native/rust_net_native/src/: lib.rs
nginx/: README.md
scripts/: build_native_all.sh  build_native_android.sh  build_native_common.sh  build_native_ios.sh  build_native_linux.sh  build_native_macos.sh  build_native_windows.sh  http_fixture_server.dart  proxy_smoke_test.sh
servicetest/: http_fixture_server.dart
src/: CMakeLists.txt  rust_net.c  rust_net.h
test/: rust_net_dio_adapter_integration_test.dart  rust_net_dio_adapter_test.dart  rust_net_native_integration_test.dart
test/support/: http_fixture_server.dart
tooling/http_fixture/: fixture_handler.dart
windows/: CMakeLists.txt
(+16 files in other folders)
