[package]
name = "rust_net_native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "http2", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
httpmock = "0.7.0"
